# scopescript-interpreter

./: LICENSE  README.md  pyproject.toml
src/interpreter/: atoms.py  interpreter.py
src/scopescript/: interpreter.py  scope.py
src/scopescript_dpaxton/: atoms.py  interpreter.py  scope.py
src/sscript_interpreter/: scope.py
tests/: test_interp.py
