[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scopescript"
version = "1.0.1"
authors = [
  { name="Dan Paxton", email="danpaxton47@gmail.com" },
]
description = "An interpreter for the ScopeScript Language."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://github.com/danpaxton/scopescript-interpreter"